2009-27-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Minor bug fixed

	Bicho retrieves comments


2009-14-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Now it inserts GeneralInfo

	General Info is stored


2009-01-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Comments data is now stored

	Comments are stored in the database


2009-04-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: Stores information in the database

	"Changes" information is now stored in mysql format


2009-03-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/backends/bg.py: It retrieves changes information

	Changes information is not stored yet. Just the HTML parser
	which creates a list of changes which will be stored in the future


2008-12-22 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* main.py: New option for parsing bugzillas added
	* backends/bg.py: bugzilla backend added

	Given support for bugzilla analysis. So far, basic information
	is stored in the database. No comments, no changes.


2008-12-19 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.21


2008-12-18 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/bicho.conf: Trunk file to default options

	Trunk config file to default options


2008-12-18 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.2


2008-09-04 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/backends/sf.py: Now, it recognises the name of the project and
	the name of the tracker
	* Bicho/SqlBug.py: Added a new storm object, GeneralInfo, which
	contains general info about: project, url, tracker's name, date
	* Bicho/Bug.py: GeneralInfo object added

	Now, it detects the project name, url, tracker's name and date of
	analysis. That info is stored in a database


2008-09-02 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>
