@@ -1,3 +1,10 @@
+2009-05-02 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>
+
+	* Bicho/backends/bg.py: KDE bugzilla support added
+
+	Bicho retrieves data from KDE's bugzilla.
+
+
 2009-27-01 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>
 
 	* Bicho/backends/bg.py: Minor bug fixed
